--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -65,9 +65,9 @@
 [core]
 	excludesfile = /Users/Fogh/.gitignore_global
 	editor = code -n --wait
-	{{ if eq .chezmoi.os "windows" }}
+{{- if eq .chezmoi.os "windows" }}
 	sshCommand = C:/Windows/System32/OpenSSH/ssh.exe
-	{{ end }}
+{{- end }}
 [commit]
 	gpgsign = true
 [gpg]
@@ -78,16 +78,17 @@
 	required = true
 	clean = git-lfs clean -- %f
 [gpg "ssh"]
-{{ if eq .chezmoi.os "darwin" }}
+{{- if eq .chezmoi.os "darwin" }}
 	program = /Applications/1Password.app/Contents/MacOS/op-ssh-sign
-{{ end }}
+{{- end }}
 [init]
 	defaultBranch = main
+{{- $ghPath := lookPath "gh" }}
+{{- if $ghPath }}
 [credential "https://github.com"]
-	helper = 
-	helper = !/opt/homebrew/bin/gh auth git-credential
+	helper = !{{ $ghPath }} auth git-credential
 [credential "https://gist.github.com"]
-	helper = 
-	helper = !/opt/homebrew/bin/gh auth git-credential
+	helper = !{{ $ghPath }} auth git-credential
+{{- end }}
 [tag]
 	sort = version:refname
