--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -82,6 +82,8 @@
 	program = /Applications/1Password.app/Contents/MacOS/op-ssh-sign
 {{- else if eq .chezmoi.os "windows" }}
 	program = "C:/Program Files/1Password/app/8/op-ssh-sign.exe"
+{{- else if eq .chezmoi.os "linux" }}
+  program = {{ .chezmoi.homeDir }}/.local/bin/op-ssh-sign
 {{- end }}
 [init]
 	defaultBranch = main
