--- a/.chezmoi.yaml.tmpl
+++ b/.chezmoi.yaml.tmpl
@@ -2,3 +2,12 @@
 
 data:
     email: {{ $email | quote }}
+
+edit:
+  command: "code"
+  args:
+    - "--wait"
+
+diff:
+  exclude:
+    - "scripts"
