Setup age encryption

--- a/.chezmoi.yaml.tmpl
+++ b/.chezmoi.yaml.tmpl
@@ -13,3 +13,8 @@ edit:
 diff:
   exclude:
     - "scripts"
+
+encryption: "age"
+age:
+  identity: "{{ .chezmoi.homeDir }}/.config/key.txt"
+  recipient: "age1hevf64dk53epfvc63agcnz80a4d6dm3gxuptpgtmvnman62js4cqdx7f8s"
