--- a/run_once_setup-darwin.sh.tmpl
+++ b/run_once_setup-darwin.sh.tmpl
@@ -14,7 +14,7 @@ defaults write com.apple.desktopservices DSDontWriteNetworkStores -bool true
 defaults write com.apple.desktopservices DSDontWriteUSBStores -bool true
 defaults write NSGlobalDomain KeyRepeat -int 1
 defaults write NSGlobalDomain InitialKeyRepeat -int 10
-defaults write NSGlobalDomain AppleShowAllExtensions -bool 
+defaults write NSGlobalDomain AppleShowAllExtensions -bool true
 defaults write com.apple.finder "ShowPathbar" -bool true
 defaults write com.apple.finder "_FXSortFoldersFirst" -bool true
 defaults write com.apple.finder _FXShowPosixPathInTitle -bool true
