--- a/run_onchange_before_decrypt-private-key.sh.tmpl
+++ b/run_onchange_before_decrypt-private-key.sh.tmpl
@@ -1,7 +1,12 @@
+{{- if ne .chezmoi.os "windows" }}
 #!/bin/sh
 
-if [ ! -f "{{ .chezmoi.homeDir }}/.config/chezmoi/key.txt" ]; then
-    mkdir -p "{{ .chezmoi.homeDir }}/.config/chezmoi"
-    chezmoi age decrypt --output "{{ .chezmoi.homeDir }}/.config/chezmoi/key.txt" --passphrase "{{ .chezmoi.sourceDir }}/key.txt.age"
-    chmod 600 "{{ .chezmoi.homeDir }}/.config/chezmoi/key.txt"
+{{- $home := .chezmoi.homeDir -}}
+{{- $source := .chezmoi.sourceDir -}}
+
+if [ ! -f "{{$home}}/.config/chezmoi/key.txt" ]; then
+    mkdir -p "{{$home}}/.config/chezmoi"
+    chezmoi age decrypt --output "{{$home}}/.config/chezmoi/key.txt" --passphrase "{{$source}}/key.txt.age"
+    chmod 600 "{{$home}}/.config/chezmoi/key.txt"
 fi
+{{- end }}
