--- a/.chezmoi.yaml.tmpl
+++ b/.chezmoi.yaml.tmpl
@@ -16,5 +16,5 @@ diff:
 
 encryption: "age"
 age:
-  identity: "{{ .chezmoi.homeDir }}/.config/key.txt"
+  identity: "{{ .chezmoi.homeDir }}/.config/chezmoi/key.txt"
   recipient: "age1hevf64dk53epfvc63agcnz80a4d6dm3gxuptpgtmvnman62js4cqdx7f8s"
