Check if oh my zsh and powerlevel10k is already installed

--- a/run_once_setup-darwin.sh.tmpl
+++ b/run_once_setup-darwin.sh.tmpl
@@ -1,8 +1,18 @@
 {{- if eq .chezmoi.os "darwin" -}}
 #!/bin/bash
 
-sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
-git clone --depth=1 https://github.com/romkatv/powerlevel10k.git "${ZSH_CUSTOM:-$HOME/.oh-my-zsh/custom}/themes/powerlevel10k"
+if [ ! -d "$HOME/.oh-my-zsh" ]; then
+  sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
+else
+  echo "oh-my-zsh already installed, skipping"
+fi
+
+p10k_dir="${ZSH_CUSTOM:-$HOME/.oh-my-zsh/custom}/themes/powerlevel10k"
+if [ ! -d "$p10k_dir" ]; then
+  git clone --depth=1 https://github.com/romkatv/powerlevel10k.git "$p10k_dir"
+else
+  echo "powerlevel10k already installed, skipping"
+fi
 
 brew analytics off
 
