--- a/run_onchange_before_decrypt-private-key.sh.tmpl
+++ b/run_onchange_before_decrypt-private-key.sh.tmpl
@@ -1,3 +1,4 @@
+{{ if ne .chezmoi.os "windows" }}
 #!/bin/sh
 
 if [ ! -f "{{ .chezmoi.homeDir }}/.config/chezmoi/key.txt" ]; then
@@ -5,3 +6,4 @@ if [ ! -f "{{ .chezmoi.homeDir }}/.config/chezmoi/key.txt" ]; then
     chezmoi age decrypt --output "{{ .chezmoi.homeDir }}/.config/chezmoi/key.txt" --passphrase "{{ .chezmoi.sourceDir }}/key.txt.age"
     chmod 600 "{{ .chezmoi.homeDir }}/.config/chezmoi/key.txt"
 fi
+{{ end }}
