Enable web_search

--- a/dot_codex/private_config.toml.tmpl
+++ b/dot_codex/private_config.toml.tmpl
@@ -1,6 +1,9 @@
 [projects."{{ .chezmoi.homeDir }}/ABR"]
 trust_level = "trusted"
 
+[tools]
+web_search = true
+
 {{ if eq .chezmoi.os "darwin" }}
 [mcp_servers.XcodeBuildMCP]
 command = "npx"
