--- a/run_onchange_before_install-packages-darwin.sh.tmpl
+++ b/run_onchange_before_install-packages-darwin.sh.tmpl
@@ -41,6 +41,7 @@ brew "zlib"
 brew "zoxide"
 brew "zsh"
 brew "felixkratz/formulae/borders"
+brew "bat"
 cask "1password-cli"
 cask "betterdisplay"
 cask "devtoys"
