--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -9,12 +9,14 @@
 
 [alias]
 	contributors = shortlog --summary --numbered
-  	zip = archive --format zip --output latest.zip HEAD
+	zip = archive --format zip --output latest.zip HEAD
 	tags = tag -l
 	amend = commit --amend
 	count = rev-list HEAD --count
 	branches = branch -a
 	remotes = remote -v
+	s = status -sb
+	l = log --oneline --graph --decorate
 
 [push]
 	followTags = true
@@ -24,6 +26,10 @@
 	autoSquash = true
 	autoStash = true
 	updateRefs = true
+
+[pull]
+	rebase = true
+	ff = only
 
 [fetch]
 	prune = true
@@ -74,6 +80,12 @@
 {{- end }}
 [commit]
 	gpgsign = true
+[merge]
+	conflictstyle = zdiff3
+[diff]
+	colorMoved = default
+[status]
+	submoduleSummary = 1
 [gpg]
 	format = ssh
 [filter "lfs"]
