--- a/run_onchange_before_install-packages-darwin.sh.tmpl
+++ b/run_onchange_before_install-packages-darwin.sh.tmpl
@@ -42,6 +42,7 @@ brew "zoxide"
 brew "zsh"
 brew "felixkratz/formulae/borders"
 brew "bat"
+brew "diffnav"
 cask "1password-cli"
 cask "betterdisplay"
 cask "devtoys"
