--- a/run_onchange_before_install-packages-darwin.sh.tmpl
+++ b/run_onchange_before_install-packages-darwin.sh.tmpl
@@ -57,6 +57,7 @@ cask "pearcleaner"
 cask "sf-symbols"
 cask "utm"
 cask "xcodes-app"
+case "thaw"
 mas "1Password for Safari", id: 1569813296
 mas "AdGuard for Safari", id: 1440147259
 mas "Color Picker", id: 1545870783
