--- a/run_onchange_before_install-packages-darwin.sh.tmpl
+++ b/run_onchange_before_install-packages-darwin.sh.tmpl
@@ -43,9 +43,9 @@ brew "zsh"
 brew "felixkratz/formulae/borders"
 brew "bat"
 brew "diffnav"
+brew "tailscale"
 cask "1password-cli"
 cask "betterdisplay"
-cask "devtoys"
 cask "dracula-xcode"
 cask "font-hack-nerd-font"
 cask "font-jetbrains-mono"
@@ -57,7 +57,7 @@ cask "pearcleaner"
 cask "sf-symbols"
 cask "utm"
 cask "xcodes-app"
-case "thaw"
+cask "codex"
 mas "1Password for Safari", id: 1569813296
 mas "AdGuard for Safari", id: 1440147259
 mas "Color Picker", id: 1545870783
@@ -75,7 +75,6 @@ mas "Obsidian Web Clipper", id: 6720708363
 mas "Online Check", id: 6504709660
 mas "Scratchpad", id: 6504040051
 mas "Speediness", id: 1596706466
-mas "Tailscale", id: 1475387142
 mas "TestFlight", id: 899247664
 mas "Things", id: 904280696
 mas "Velja", id: 1607635845
