--- a/run_onchange_before_install-packages-darwin.sh.tmpl
+++ b/run_onchange_before_install-packages-darwin.sh.tmpl
@@ -43,7 +43,7 @@ brew "zsh"
 brew "felixkratz/formulae/borders"
 brew "bat"
 brew "diffnav"
-brew "tailscale"
+cask "tailscale"
 cask "1password-cli"
 cask "betterdisplay"
 cask "dracula-xcode"
